# masstable

./: 404.html  LICENSE  Makefile  Pipfile  README.md  chart.html  index.html  mkdocs.yml  params.json  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: build.yml
docs/: index.md  reference.md
masstable/: __init__.py  masstable.py
masstable/data/: AME1995.txt  AME1995all.txt  AME2003.txt  AME2003all.txt  AME2012.txt  AME2012all.txt  BR2013.txt  DUZU.txt  ETFSI12.txt  FRDM95.txt  GK88.txt  HFB14.txt  HFB26.txt  KTUY05.txt  MAJA88.txt  SVM13.txt  TCSM12.txt  TCSM13.txt  WS32010.txt  WS32011.txt
reference/: index.html
search/: search_index.json
tests/: test_masstable.py
